# MarCharVgen

./: Cargo.toml  README.md
src/: config.rs  count_trie.rs  generator.rs  lib.rs  main.rs  sampling.rs
tests/: test_generator.rs
