[package]
name = "marcharvgen"
version = "0.1.0"
edition = "2024"
authors = ["Braden Griebel <bgriebel@uw.edu>"]
description = "A Markov word generator"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Braden-Griebel/MarCharVgen"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
ordered_hash_map = "0.4.0"
rand = "0.9.0"
thiserror = "2.0.12"
